amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-argument-directive
  Message: Cannot exist two or more arguments with name 'text'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql#/declares/MyDirective
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(9,60)]
  Location: 
